--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
 fastapi
-pydantic
-langchain
-langchain-groq
-langchain_community
-validators
-youtube-transcript-api
-unstructured
 uvicorn
+langchain
+langchain_groq
+langchain_community
+pydantic
+validators
 python-multipart
-langcorn
